tree-sitter-flow/test/corpus/declarations.txt
=========
Variables
=========

var test = 1;
var msg: string;

---

(source_file
    (varDeclaration
        (identifier)
        (number))
    (varDeclaration
        (identifier)
        (typeHint
            (identifier))))

=========
Constants
=========

const test = 1;
const msg: string;

---

(source_file
    (varDeclaration
        (identifier)
        (number))
    (varDeclaration
        (identifier)
        (typeHint
            (identifier))))
