tree-sitter-flow/test/corpus/statements.txt
=====================
Expression Statements
=====================

1;
1.2;
"Hallo";
true;
null;
identifier;

---

(source_file
    (expressionStatement
        (number))
    (expressionStatement
        (number))
    (expressionStatement
        (string))
    (expressionStatement
        (bool))
    (expressionStatement
        (null))
    (expressionStatement
        (identifier)))

================
Print Statements
================

print 1;
print "Hallo Welt";

---
(source_file
    (printStatement
        (number))
    (printStatement
        (string)))
    
